[bitcoin/0.19.1dev] minor fix : Suppress unnecessary recompilation due to header file generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if (NOT CMAKE_INSTALL_PREFIX OR
 endif()
 
 
-file(GLOB_RECURSE BITCOIN_0_19_1DEV_SRCS ${CMAKE_CURRENT_SOURCE_DIR} *.c *.h *.cpp)
+file(GLOB_RECURSE BITCOIN_0_19_1DEV_SRCS ${CMAKE_CURRENT_SOURCE_DIR} *.c *.cpp)
 
 add_custom_target(bitcoin_0.19.1dev ALL
   DEPENDS ${CMAKE_INSTALL_PREFIX}/plugins/libBITCOIND_0.19.1DEV.so
