Fix cmake compatibility issue related to Bitcoin plugin's property

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,8 @@ add_library(Bitcoin_0_19_1dev::Plugin SHARED IMPORTED GLOBAL)
 add_dependencies(Bitcoin_0_19_1dev::Plugin bitcoin_0.19.1dev)
 set_target_properties(Bitcoin_0_19_1dev::Plugin PROPERTIES
   IMPORTED_LINK_INTERFACE_LANGUAGES "C"
-  IMPORTED_LOCATION ${CMAKE_INSTALL_PREFIX}/plugins/libBITCOIND_0.19.1DEV.so)
-target_include_directories(Bitcoin_0_19_1dev::Plugin
-        INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src)
+  IMPORTED_LOCATION ${CMAKE_INSTALL_PREFIX}/plugins/libBITCOIND_0.19.1DEV.so
+  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set_property(TARGET Bitcoin_0_19_1dev::Plugin PROPERTY IMPORTED_NO_SONAME 1)
 
 
